samples/_failures_safe/1761317479_8b7805_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c8175e9.c: In function ‘main’:
./samples/SAFE/__tmp_3c8175e9.c:121:30: error: missing terminating " character
  121 |             cols2 = read_int("Enter columns for
      |                              ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3c8175e9.c:121:13: error: expected expression at end of input
  121 |             cols2 = read_int("Enter columns for
      |             ^~~~~
./samples/SAFE/__tmp_3c8175e9.c:121:21: error: too few arguments to function ‘read_int’
  121 |             cols2 = read_int("Enter columns for
      |                     ^~~~~~~~
./samples/SAFE/__tmp_3c8175e9.c:10:5: note: declared here
   10 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_3c8175e9.c:121:13: error: expected declaration or statement at end of input
  121 |             cols2 = read_int("Enter columns for
      |             ^~~~~
./samples/SAFE/__tmp_3c8175e9.c:121:13: error: expected declaration or statement at end of input
